# opencv_contrib

modules/: README.md
modules/cnn_3dobj/: CMakeLists.txt
modules/dnn/cmake/: OpenCVFindLibProtobuf.cmake
modules/dnn/misc/tensorflow/: attr_value.pb.cc  attr_value.pb.h  function.pb.cc  function.pb.h  graph.pb.cc  graph.pb.h  op_def.pb.cc  op_def.pb.h  tensor.pb.cc  tensor.pb.h
modules/dummy/: CMakeLists.txt
modules/fuzzy/include/opencv2/fuzzy/: fuzzy_F0_math.hpp  fuzzy_image.hpp
modules/fuzzy/src/: fuzzy_F0_math.cpp  fuzzy_image.cpp
modules/fuzzy/test/: test_f0.cpp  test_image.cpp  test_precomp.hpp
modules/matlab/generator/: parse_tree.py
modules/sfm/: CMakeLists.txt  README.md
modules/sfm/include/opencv2/: sfm.hpp
modules/sfm/include/opencv2/sfm/: conditioning.hpp  fundamental.hpp  numeric.hpp  projection.hpp  robust.hpp  simple_pipeline.hpp  triangulation.hpp
modules/sfm/samples/: CMakeLists.txt  nView_reconstruction.cpp  nView_scene_reconstruction.cpp  random_scene_reconstruction.cpp  recon2v.cpp  simple_reconstruction.cpp  unordered_scene_reconstruction.cpp
modules/sfm/src/: conditioning.cpp  fundamental.cpp  numeric.cpp  projection.cpp  reconstruct.cpp  robust.cpp  simple_pipeline.cpp  triangulation.cpp
modules/sfm/src/libmv_light/: CMakeLists.txt
modules/sfm/src/libmv_light/libmv/: CMakeLists.txt
modules/sfm/src/libmv_light/libmv/correspondence/: nRobustViewMatching.cc
modules/sfm/src/libmv_light/libmv/simple_pipeline/: CMakeLists.txt  autocalibrate.cc  bundle.h
modules/sfm/test/: test_common.cpp  test_fundamental.cpp  test_precomp.cpp  test_precomp.hpp  test_reconstruct.cpp  test_robust.cpp  test_simple_pipeline.cpp  test_triangulation.cpp
modules/xfeatures2d/: CMakeLists.txt
modules/xfeatures2d/cmake/: download_vgg.cmake
modules/xfeatures2d/src/: surf.cpp  surf.hpp  surf.ocl.cpp  vgg.cpp
modules/xfeatures2d/test/: test_features2d.cpp  test_rotation_and_scale_invariance.cpp
modules/ximgproc/: README.md
modules/ximgproc/include/opencv2/: ximgproc.hpp
modules/ximgproc/include/opencv2/ximgproc/: ridgefilter.hpp
modules/ximgproc/perf/: perf_ridge_detection_filter.cpp
modules/ximgproc/src/: ridgedetectionfilter.cpp  thinning.cpp
modules/ximgproc/test/: test_ridge_detection_filter.cpp
